--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ pygments: false
 markdown: kramdown
 extensions: [fenced_code_blocks]
 excerpt_separator: "<!--more-->"
-url: https://fullit.github.io
+url: https://kgyeongmi21.github.io
 baseurl: "/fullit.github.io"
 # Themes are encouraged to use these universal variables
 # so be sure to set them if your theme uses them.
